# blocks

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  fragment.sl  vertex.sl
assets/shaders/: fragment.sl  vertex.sl
src/: camera.c  camera.h  chunk.c  chunk.h  common.h  gl.c  gl.h  image.c  image.h  main.c  math.c  math.h  modern.c  modern.h  player.c  player.h
